--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			for (i=0; i<9; i++)
 				{
 					var counter = i+1;
-					grid += "<div class=boxes id=box" + counter + "><span class=letters>X</span></div>";
+					grid += "<div class=boxes id=box" + counter + "></div>";
 				}
 			document.getElementById("gameboard").innerHTML = grid;
 			
