--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="row">
 		<div class="col-5"></div>
 		<div class="col-2">
-			<button class="mybutton" onclick="startGame()">Start the Game</button>
+			<button class="mybutton" id="myButton">Start the Game</button>
 			<div id="whoseTurn"></div>
 		</div>
 		<div class="col-5"></div>
